refactor: OrderRepositoryIntegrationTest